--- a/.github/workflows/githup-actions-plant.yml
+++ b/.github/workflows/githup-actions-plant.yml
@@ -46,28 +46,30 @@ jobs:
     - name: Build app
       run: npm run build --prod
     
-    - name: Upload artifact
-      uses: actions/upload-artifact@v2
-      with: 
-        name: devops-test-${{ github.run_id }}-${{ github.run_number }}
-        path: ./dist/devops-test
-
-  deploy: 
-    needs: build
-    runs-on: ubuntu-latest
-
-    steps: 
-    # - name: Dowload artifact
-    #   uses: actions/download-artifact@v2
+    # - name: Upload artifact
+    #   uses: actions/upload-artifact@v2
     #   with: 
-    #     name: devops-test-${{ github.run_id }}-${{ github.run_number }} 
-    #     path: './build'
+    #     name: devops-test-${{ github.run_id }}-${{ github.run_number }}
+    #     path: ./dist/devops-test
+    # - uses: actions/checkout@v1
 
-    - name: Deploy App
-      uses: actions/checkout@v2
-    
-    - uses: akhileshns/heroku-deploy@v3.12.12 # This is the action
+    - name: Copy repository contents via scp
+      uses: appleboy/scp-action@master
+      env:
+        HOST: ${{ secrets.HOST }}
+        USERNAME: ${{ secrets.USERNAME }}
+        PORT: ${{ secrets.PORT }}
+        KEY: ${{ secrets.SSHKEY }}
       with:
-        heroku_api_key: ${{ secrets.DEPLOY_WITH_GIT }}
-        heroku_app_name: "deploy-with-git"
-        heroku_email: "decilapdenis@gmail.com"
+        source: "./dist/devops-test"
+        target: "/var/www/html/"
+
+    - name: Executing remote command
+      uses: appleboy/ssh-action@master
+      with:
+        host: ${{ secrets.HOST }}
+        USERNAME: ${{ secrets.USERNAME }}
+        PORT: ${{ secrets.PORT }}
+        KEY: ${{ secrets.SSHKEY }}
+        script: ls
+
