--- a/.github/workflows/githup-actions-plant.yml
+++ b/.github/workflows/githup-actions-plant.yml
@@ -46,30 +46,33 @@ jobs:
     - name: Build app
       run: npm run build --prod
     
-    # - name: Upload artifact
-    #   uses: actions/upload-artifact@v2
-    #   with: 
-    #     name: devops-test-${{ github.run_id }}-${{ github.run_number }}
-    #     path: ./dist/devops-test
-    # - uses: actions/checkout@v1
+    - name: Upload artifact
+      uses: actions/upload-artifact@v2
+      with: 
+        name: devops-test-${{ github.run_id }}-${{ github.run_number }}
+        path: ./dist/devops-test
 
-    - name: Copy repository contents via scp
-      uses: appleboy/scp-action@master
-      env:
-        HOST: ${{ secrets.HOST }}
-        USERNAME: ${{ secrets.USERNAME }}
-        PORT: ${{ secrets.PORT }}
-        KEY: ${{ secrets.SSHKEY }}
-      with:
-        source: "./dist/devops-test"
-        target: "/var/www/html/"
+  deploy: 
+    needs: build
+    runs-on: ubuntu-latest
+    
+    steps:
+      - name: Copy repository contents via scp
+        uses: appleboy/scp-action@master
+        env:
+          HOST: ${{ secrets.HOST }}
+          USERNAME: ${{ secrets.USERNAME }}
+          PORT: ${{ secrets.PORT }}
+          KEY: ${{ secrets.SSHKEY }}
+        with:
+          source: "./dist/devops-test"
+          target: "/var/www/html/"
 
-    - name: Executing remote command
-      uses: appleboy/ssh-action@master
-      with:
-        host: ${{ secrets.HOST }}
-        USERNAME: ${{ secrets.USERNAME }}
-        PORT: ${{ secrets.PORT }}
-        KEY: ${{ secrets.SSHKEY }}
-        script: ls
-
+      - name: Executing remote command
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.HOST }}
+          USERNAME: ${{ secrets.USERNAME }}
+          PORT: ${{ secrets.PORT }}
+          KEY: ${{ secrets.SSHKEY }}
+          script: ls
