--- a/.github/workflows/githup-actions-plant.yml
+++ b/.github/workflows/githup-actions-plant.yml
@@ -53,7 +53,7 @@ jobs:
   #       path: ./dist/devops-test
 
   deploy: 
-    needs: build
+    #needs: build
     runs-on: ubuntu-latest
 
     steps:
