--- a/.github/workflows/githup-actions-plant.yml
+++ b/.github/workflows/githup-actions-plant.yml
@@ -67,4 +67,4 @@ jobs:
       run: ssh-keyscan -H ${{ secrets.SSH_HOST }} >> ~/.ssh/known_hosts
 
     - name: Deploy with rsync
-      run: rsync -avz ./dist/deploy-test/ ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:/var/www/html/
+      run: rsync -avz ./dist/deploy-test ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:/var/www/html/
