test deploy vps

--- a/.github/workflows/githup-actions-plant.yml
+++ b/.github/workflows/githup-actions-plant.yml
@@ -46,17 +46,17 @@ jobs:
     - name: Build app
       run: npm run build --prod
     
-    - name: Upload artifact
-      uses: actions/upload-artifact@v2
-      with: 
-        name: devops-test-${{ github.run_id }}-${{ github.run_number }}
-        path: ./dist/devops-test
+    # - name: Upload artifact
+    #   uses: actions/upload-artifact@v2
+    #   with: 
+    #     name: devops-test-${{ github.run_id }}-${{ github.run_number }}
+    #     path: ./dist/devops-test
 
-  deploy: 
-    needs: build
-    runs-on: ubuntu-latest
+  # deploy: 
+  #   needs: build
+  #   runs-on: ubuntu-latest
 
-    steps:
+  #   steps:
     - name: Install SSH Key
       uses: shimataro/ssh-key-action@v2
       with:
