--- a/.github/workflows/githup-actions-plant.yml
+++ b/.github/workflows/githup-actions-plant.yml
@@ -38,13 +38,13 @@ jobs:
       with: 
         node-version: '16.x'
 
-    - uses: actions/checkout@v2
+    # - uses: actions/checkout@v2
 
-    - name: Install dependencies
-      run: npm install
+    # - name: Install dependencies
+    #   run: npm install
       
-    - name: Build app
-      run: npm run build --prod
+    # - name: Build app
+    #   run: npm run build --prod
     
     # - name: Upload artifact
     #   uses: actions/upload-artifact@v2
@@ -57,17 +57,34 @@ jobs:
   #   runs-on: ubuntu-latest
 
   #   steps:
-    - name: Install SSH Key
-      uses: shimataro/ssh-key-action@v2
+    # - name: Install SSH Key
+    #   uses: shimataro/ssh-key-action@v2
+    #   with:
+    #     key: ${{ secrets.SSHKEY }} 
+    #     known_hosts: 'just-a-placeholder-so-we-dont-get-errors'
+
+    # - name: Adding Known Hosts
+    #   run: ssh-keyscan -H ${{ secrets.SSH_HOST }} >> ~/.ssh/known_hosts
+
+    # - name: Copy dist with rsync
+    #   run: | 
+    #     rsync -avz ./dist/deploy-test ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:/home/azureuser/www/
+    #     rsync -avz ./server ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:/home/azureuser/www/
+    #     pm2 start ./server/server.js
+  deploy:
+    needs: [test]
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: SSH and deploy node app
+      uses: appleboy/ssh-action@master
       with:
-        key: ${{ secrets.SSHKEY }} 
-        known_hosts: 'just-a-placeholder-so-we-dont-get-errors'
-
-    - name: Adding Known Hosts
-      run: ssh-keyscan -H ${{ secrets.SSH_HOST }} >> ~/.ssh/known_hosts
-
-    - name: Copy dist with rsync
-      run: | 
-        rsync -avz ./dist/deploy-test ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:/home/azureuser/www/
-        rsync -avz ./server ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:/home/azureuser/www/
-        pm2 start ./server/server.js
+        host: ${{ secrets.SSH_HOST }}
+        username: ${{ secrets.SSH_USER }}
+        key: ${{ secrets.SSH_KEY }}
+        port: ${{ secrets.SSH_PORT }}
+        script: |
+          ls
+         # git pull origin master
+         # npm install --production
+         # pm2 restart node-app
