--- a/.github/workflows/githup-actions-plant.yml
+++ b/.github/workflows/githup-actions-plant.yml
@@ -86,6 +86,6 @@ jobs:
         port: ${{ secrets.SSH_PORT }}
         script: |
           ls
-         # git pull origin master
+          git pull origin master
          # npm install --production
          # pm2 restart node-app
