--- a/.github/workflows/githup-actions-plant.yml
+++ b/.github/workflows/githup-actions-plant.yml
@@ -2,13 +2,9 @@ name: CI-CD
 on: 
   push:
     branches: [ main ]
-
   workflow_dispatch:
-
 jobs:
-
   # test:
-
   #   runs-on: ubuntu-latest
     
   #   steps:
@@ -57,28 +53,26 @@ jobs:
   #   runs-on: ubuntu-latest
 
   #   steps:
-    # - name: Install SSH Key
-    #   uses: shimataro/ssh-key-action@v2
-    #   with:
-    #     key: ${{ secrets.SSHKEY }} 
-    #     known_hosts: 'just-a-placeholder-so-we-dont-get-errors'
+    - name: Install SSH Key
+      uses: shimataro/ssh-key-action@v2
+      with:
+        key: ${{ secrets.SSHKEY }} 
+        known_hosts: 'just-a-placeholder-so-we-dont-get-errors'
 
-    # - name: Adding Known Hosts
-    #   run: ssh-keyscan -H ${{ secrets.SSH_HOST }} >> ~/.ssh/known_hosts
+    - name: Adding Known Hosts
+      run: ssh-keyscan -H ${{ secrets.SSH_HOST }} >> ~/.ssh/known_hosts
 
-    # - name: Copy dist with rsync
-    #   run: | 
-    #     rsync -avz ./dist/deploy-test ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:/home/azureuser/www/
-    #     rsync -avz ./server ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:/home/azureuser/www/
-    #     pm2 start ./server/server.js
+    - name: Copy dist with rsync
+      run: | 
+        rsync -avz ./dist/deploy-test ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:/home/azureuser/www/
   deploy:
-    #needs: [test]
+    needs: [build]
     runs-on: ubuntu-latest
-
 
     steps:
     - name: SSH and deploy node app
       uses: appleboy/ssh-action@master
+      #uses: appleboy/ssh-action@master
       with:
         host: ${{ secrets.SSH_HOST }}
         username: ${{ secrets.SSH_USER }}
